--- a/app/src/main/res/layout/appicant_form.xml
+++ b/app/src/main/res/layout/appicant_form.xml
@@ -118,17 +118,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <android.support.design.widget.TextInputLayout
+        <AutoCompleteTextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1">
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-                android:hint="Profession"
-                android:id="@+id/edt_profession"/>
-        </android.support.design.widget.TextInputLayout>
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+            android:hint="Profession"
+            android:layout_weight="1"
+            android:id="@+id/auto_profession"/>
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
